FWARC/2006/473 sun4v guest state API update FWARC/2006/542 Guest State Supported CIF 6383225 Solaris does not send guest state to alom

--- a/usr/src/psm/promif/ieee1275/sun4v/Makefile.files
+++ b/usr/src/psm/promif/ieee1275/sun4v/Makefile.files
@@ -52,5 +52,6 @@ CORE_OBJS +=				\
 	prom_set_mmfsa_traptable.o	\
 	prom_sparc.o			\
 	prom_sun4v_api_version.o	\
+	prom_sun4v_soft_state_supported.o	\
 	prom_vercheck.o			\
 	prom_vername.o
