--- a/usr/src/pkgdefs/SUNWgssk/Makefile
+++ b/usr/src/pkgdefs/SUNWgssk/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,8 +21,8 @@
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 1997 by Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 
 include	../Makefile.com
@@ -32,12 +31,17 @@ DATAFILES += depend
 
 ACTION_SUNWgss=grep SUNWgss depend > /dev/null || \
 	( chmod 666 depend; \
-	echo "P SUNWgss	gss" >> depend; \
+	echo "P SUNWgss	GSSAPI V2" >> depend; \
 	chmod 444 depend );
 
 ACTION_SUNWgssc=grep SUNWgssc depend > /dev/null || \
 	( chmod 666 depend; \
-	echo "P SUNWgssc	gssapi configuration" >> depend; \
+	echo "P SUNWgssc	GSSAPI CONFIG V2" >> depend; \
+	chmod 444 depend );
+
+ACTION_SUNWkrbu=grep SUNWkrbu depend > /dev/null || \
+	( chmod 666 depend; \
+	echo "P SUNWkrbu	Kerberos version 5 support (Usr)" >> depend; \
 	chmod 444 depend );
 
 .KEEP_STATE:
@@ -50,6 +54,7 @@ install: all pkg
 action: depend
 	$(ACTION_SUNWgss)
 	$(ACTION_SUNWgssc)
+	$(ACTION_SUNWkrbu)
 	touch $@
 
 include ../Makefile.targ
