PSARC/2006/599 SPARC PCI Express Fabric FMA Support 6345809 SPARC PCIe systems should not call pci_ereport_post 6404017 PX Error handling code should match error philosophy spec 6418713 Failed PIOs in PCIe sparc platforms may go undetected 6466248 Support PCIe Fabric FMA for SPARC Platforms

--- a/usr/src/uts/sparc/pci_pci/Makefile
+++ b/usr/src/uts/sparc/pci_pci/Makefile
@@ -18,7 +18,6 @@
 #
 # CDDL HEADER END
 #
-#
 # uts/sparc/pci_pci/Makefile
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
@@ -80,6 +79,11 @@ CFLAGS += -dalign
 # Please do not carry these forward to new Makefiles.
 #
 LINTTAGS	+= -erroff=E_SUSPICIOUS_COMPARISON
+
+#
+#	Dependency
+#
+LDFLAGS += -dy -Nmisc/pcie
 
 #
 #	Default build targets.
