6425112 network/service shouldn't write to filesystems it doesn't depend on 6499493 machine installed with snv_53 can not find default router automatically (only after sys-unconfig?) 6503806 md_monitord Makefile install target needs a dependency on SVCMETHOD

--- a/usr/src/cmd/lvm/md_monitord/Makefile
+++ b/usr/src/cmd/lvm/md_monitord/Makefile
@@ -62,6 +62,8 @@ POFILE= md_monitordp.po
 
 ROOTMANIFESTDIR=	$(ROOTSVCSYSTEM)
 
+$(ROOTSVCMETHOD):	$(SVCMETHOD)
+
 all     :=      TARGET = all
 install :=      TARGET = install
 clean   :=      TARGET = clean
