FWARC/2006/498 N2 PIU Performance Counters HV API FWARC/2006/592 Niagara2 PIU Performance Counter bus binding and MD description 6466249 Need support for N2 PIU performance counters

--- a/usr/src/uts/sun4v/Makefile.files
+++ b/usr/src/uts/sun4v/Makefile.files
@@ -117,6 +117,8 @@ SPECIAL_OBJS += intrq.o
 ROOTNEX_OBJS	+= mach_rootnex.o
 PX_OBJS		+= px_lib4v.o px_err.o px_tools_4v.o px_hcall.o
 FPC_OBJS	+= fpc-impl-4v.o fpc-asm-4v.o
+N2PIUPC_OBJS	+= n2piupc.o n2piupc_tables.o n2piupc_kstats.o \
+			n2piupc_biterr.o n2piupc_asm.o
 TRAPSTAT_OBJS	+= trapstat.o
 NIUMX_OBJS	+= niumx.o
 
