--- a/usr/src/uts/sun4v/io/n2piupc/n2piupc.conf
+++ b/usr/src/uts/sun4v/io/n2piupc/n2piupc.conf
@@ -1,4 +1,3 @@
-#! /bin/sh
 #
 # CDDL HEADER START
 #
@@ -24,29 +23,7 @@
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
-#
- 
-PATH="/usr/bin:/usr/sbin:${PATH}"
-export PATH
 
-installed() {
-	driver=$1
-	grep "^${driver} " $BASEDIR/etc/name_to_major > /dev/null 2>&1
+#pragma ident	"%Z%%M%	%I%	%E% SMI"
 
-	return $?
-}
-
-EXIT=0
-
-if installed fpc
-then 
-	rem_drv -b ${BASEDIR} fpc || EXIT=1
-fi
-
-if installed n2piupc
-then
-	rem_drv -b ${BASEDIR} n2piupc || EXIT=1
-fi
-
-exit $EXIT
+ddi-forceattach=1;
