--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -501,6 +501,11 @@ ATUN_OBJS +=	atun.o
 
 6TO4TUN_OBJS +=	6to4tun.o
 
+RDS_OBJS +=	rdsddi.o rdssubr.o rds_opt.o rds_ioctl.o
+
+RDSIB_OBJS +=	rdsib.o rdsib_ib.o rdsib_cm.o rdsib_ep.o rdsib_buf.o \
+		rdsib_arp.o rdsib_arp_link.o rdsib_debug.o rdsib_sc.o
+
 UDP_OBJS +=	udpddi.o
 
 UDP6_OBJS +=	udp6ddi.o
