--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -238,6 +238,7 @@ DRV_KMODS	+= ipf
 DRV_KMODS	+= rpcib
 DRV_KMODS	+= vni
 DRV_KMODS	+= xge
+DRV_KMODS	+= rds
 
 #
 # Don't build some of these for OpenSolaris, since they will be
@@ -272,7 +273,7 @@ DRV_KMODS	+= usb_as usb_ac
 DRV_KMODS	+= usbskel
 DRV_KMODS	+= hci1394 av1394 scsa1394 dcam1394
 DRV_KMODS	+= sbp2
-DRV_KMODS	+= ib ibd
+DRV_KMODS	+= ib ibd rdsib
 DRV_KMODS	+= pci_pci px_pci pxb_plx pxb_bcm pcie
 DRV_KMODS	+= i8042 kb8042 mouse8042
 DRV_KMODS	+= fcode
