PSARC 2006/679 Fault Event Extension 6279682 fmadm -q rotate errlog hangs while fmd report an error into the log 6326650 fma needs more dcmds for getting errors from crash dumps 6372709 fltlog can grow without bound; needs to be managed by logadm 6400607 fmd dumped core in zfs-diagnosis 6464740 fmdump -v output should display FRU location (label) information separate from the FRU 6485057 mc-amd driver should provide access to HT routing tables 6493219 libtopo needs to allow re-enumeration according static .xml props 6495169 PCI topo enumerator should maintain a 'module' property 6496757 Incorrect initializer for topo_builtin.c:_topo_builtins[] 6496850 Need mdb support for libtopo 6498181 .po files inconsistencies wrt the event registry content 6498187 SCA1000 and SCA500 .po dictionary files are out of date 6498195 SMF dictionary .po files are inconsistent 6498201 ZFS dictionary .po files are out of date 6502660 eft fills in ASRU and FRU from libtopo when none are defined in a fault event specification 6502949 eft memory leak in platform_fault2ipath() 6506108 topo_fmri_nvl2str on mem scheme fails to lookup offset and physaddr 6506622 missing entry in PCIEX dict/po files

--- a/usr/src/cmd/mdb/sparc/v7/libtopo/Makefile
+++ b/usr/src/cmd/mdb/sparc/v7/libtopo/Makefile
@@ -18,68 +18,20 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
-#
-# MDB modules used for debugging user processes that every ISA's build
-# subdirectory will need to build.
-# 
-COMMON_MODULES_PROC = \
-	dof \
-	libavl \
-	libc \
-	libnvpair \
-	libproc \
-	libsysevent \
-	libtopo \
-	libumem \
-	libuutil \
-	libzpool \
-	mdb_ds \
-	mdb_test
+#ident	"%Z%%M%	%I%	%E% SMI"
 
-#
-# MDB modules used for debugging user processes which are only 32-bit
-#
-COMMON_MODULES_PROC_32BIT = \
-	svc.configd \
-	svc.startd
+MODULE = libtopo.so
+MDBTGT = proc
 
-#
-# MDB modules used for debugging kernels.
-#
-COMMON_MODULES_KVM = \
-	arp \
-	audiosup \
-	cpc \
-	crypto	\
-	dtrace	\
-	genunix \
-	hook \
-	neti \
-	ip \
-	ipc \
-	ipp \
-	krtld \
-	lofs \
-	logindmux \
-	md \
-	nca \
-	ptm \
-	random \
-	s1394 \
-	scsi_vhci \
-	sctp \
-	specfs \
-	sppp \
-	ufs \
-	usba \
-	zfs
+MODSRCS = libtopo.c
 
-CLOSED_COMMON_MODULES_KVM = \
-	nfs
+include ../../../../Makefile.cmd
+include ../../Makefile.sparcv7
+include ../../../Makefile.module
 
-include $(SRC)/Makefile.master
+CPPFLAGS += -I$(SRC)/lib/fm/topo/libtopo/common
