PSARC 2006/484 USB Video Class Driver 6422599 USB video class driver to enable USB webcams

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -598,6 +598,8 @@ HID_OBJS += hid.o
 
 USBSKEL_OBJS += usbskel.o
 
+USBVC_OBJS += usbvc.o usbvc_v4l2.o
+
 HIDPARSER_OBJS += hidparser.o
 
 USB_AC_OBJS += usb_ac.o
