--- a/usr/src/lib/fm/topo/libtopo/sparcv9/Makefile
+++ b/usr/src/lib/fm/topo/libtopo/sparcv9/Makefile
@@ -29,7 +29,7 @@ include ../Makefile.com
 include ../../../../Makefile.lib.64
 
 CPPFLAGS += -I $(ROOT)/usr/platform/sun4v/include
-LDLIBS += -L$(ROOTLIBDIR64) -lmdesc -lldom
+LDLIBS += -L$(ROOTLIBDIR64)
 DYNFLAGS += -R/usr/lib/fm/$(MACH64)
 
 install: all $(ROOTLIBS64) $(ROOTLINKS64) $(ROOTLINT64)
