PSARC/2006/384 SATA AHCI HBA Driver 6261241 AHCI driver is needed for ICH6 and SATA native mode 6418168 AHCI driver is needed for VIA vt8251 and SATA native mode

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -748,6 +748,8 @@ SI3124_OBJS += si3124.o
 
 NSCONFIG_DEVNAME_OBJS += sdev_nsconfig_mod.o
 
+AHCI_OBJS += ahci.o
+
 PCIIDE_OBJS += pci-ide.o
 
 PCEPP_OBJS += pcepp.o
