--- a/usr/src/uts/intel/warlock/Makefile
+++ b/usr/src/uts/intel/warlock/Makefile
@@ -128,3 +128,4 @@ warlock.sata:
 	@cd ../sata; make clean; $(MAKE) warlock
 	@cd ../si3124; make clean; $(MAKE) warlock
 	@cd $(CLOSED)/uts/intel/marvell88sx; make clean; $(MAKE) warlock
+	@cd ../ahci; make clean; $(MAKE) warlock
