--- a/usr/src/uts/sun4v/sys/Makefile
+++ b/usr/src/uts/sun4v/sys/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -84,6 +84,7 @@ HDRS=	\
 	mmu.h			\
 	niagaraasi.h		\
 	niagararegs.h		\
+	ntwdt.h			\
 	pte.h			\
 	prom_plat.h		\
 	qcn.h			\
