6493109 pfil SMF service isn't removed on an upgrade 6498408 fr_slowtimer is inactive 6498986 ipfilter complains bad l4 checksum for loopback packets which hit ftp proxy rules

--- a/usr/src/pkgdefs/SUNWipfr/Makefile
+++ b/usr/src/pkgdefs/SUNWipfr/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -11,7 +11,7 @@ DATAFILES = depend i.preserve i.manifest
 
 .KEEP_STATE:
 
-all: $(FILES) preremove
+all: $(FILES) preremove postinstall
 install: all pkg
 
 include ../Makefile.targ
