--- a/usr/src/cmd/cmd-inet/usr.sbin/kssl/kssladm/Makefile
+++ b/usr/src/cmd/cmd-inet/usr.sbin/kssl/kssladm/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 # 
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -31,13 +30,12 @@
 PROG= kssladm
 
 include $(SRC)/cmd/Makefile.cmd
-include $(SRC)/lib/openssl/Makefile.openssl
 
 OBJS =	\
     kssladm.o \
     kssladm_create.o \
     kssladm_delete.o \
-    openssl_util.o
+    ksslutil.o
 
 SRCS = $(OBJS:%.o=%.c)
 
@@ -47,12 +45,7 @@ ROOTUSRLIBPROG = $(PROG:%=$(ROOTLIB)/%)
 
 CFLAGS +=	$(CCVERBOSE)
 
-CPPFLAGS += $(OPENSSL_CPPFLAGS)
-DYNFLAGS += $(OPENSSL_DYNFLAGS)
-LDFLAGS += $(OPENSSL_LDFLAGS)
-LINTFLAGS += $(OPENSSL_LDFLAGS)
-
-LDLIBS += -lnsl -lpkcs11 -lcrypto -lcryptoutil
+LDLIBS += -lkmf -lpkcs11 -lcryptoutil -lnsl
 
 all: $(PROG)
 
