PSARC 2003/064 SDP: Sockets Direct Protocol 5068505 Integration of PSARC 2003/064 SDP into solaris 6503394 TX introduced an incorrect assert: ASSERT(!connp->conn_mac_exempt);

--- a/usr/src/cmd/Makefile
+++ b/usr/src/cmd/Makefile
@@ -333,6 +333,7 @@ COMMON_SUBDIRS=		\
 	savecore	\
 	script		\
 	sdiff		\
+	sdpadm		\
 	sendmail	\
 	setfacl		\
 	setmnt		\
@@ -635,6 +636,7 @@ MSGSUBDIRS=		\
 	scadm		\
 	script		\
 	sdiff		\
+	sdpadm		\
 	sgs		\
 	sh		\
 	sleep		\
