--- a/usr/src/pkgdefs/Makefile
+++ b/usr/src/pkgdefs/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -211,6 +211,8 @@ COMMON_SUBDIRS= \
 	SUNWhwdata \
 	SUNWib \
 	SUNWibhca \
+	SUNWibsdpu \
+	SUNWibsdp \
 	SUNWiotu  \
 	SUNWioth  \
 	SUNWipc  \
@@ -394,6 +396,7 @@ COMMON_XMODS= \
 	SUNWcryr \
 	SUNWcryptoint \
 	SUNWintgige \
+	SUNWibsdpib \
 	SUNWkdcr \
 	SUNWkdcu \
 	SUNWopenssl-man \
