--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -274,7 +274,7 @@ DRV_KMODS	+= usbskel
 DRV_KMODS	+= usbvc
 DRV_KMODS	+= hci1394 av1394 scsa1394 dcam1394
 DRV_KMODS	+= sbp2
-DRV_KMODS	+= ib ibd rdsib
+DRV_KMODS	+= ib ibd rdsib sdp
 DRV_KMODS	+= pci_pci px_pci pxb_plx pxb_bcm pcie
 DRV_KMODS	+= i8042 kb8042 mouse8042
 DRV_KMODS	+= fcode
@@ -434,6 +434,7 @@ XMODS		+=
 $(CLOSED_BUILD)CLOSED_XMODS =		\
 	daplt		\
 	e1000g		\
+	sdpib		\
 	tavor		\
 	wsdrv
 
