--- a/usr/src/cmd/cmd-inet/etc/dhcp/Makefile
+++ b/usr/src/cmd/cmd-inet/etc/dhcp/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,38 +19,28 @@
 # CDDL HEADER END
 #
 #
-#ident	"%W%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 1999 by Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 # cmd/cmd-inet/etc/dhcp/Makefile
 #
 
-DHCPDIR=	dhcp
-ETCPROG=	inittab
+DHCPFILES=	inittab inittab6
 
 include ../../../Makefile.cmd
 
-ETCDHCPDIR=	$(ROOTETC)/$(DHCPDIR)
-ETCDHCPPROG=	$(ETCPROG:%=$(ETCDHCPDIR)/%)
+ETCDHCPDIR=	$(ROOTETC)/dhcp
+ETCDHCPFILES=	$(DHCPFILES:%=$(ETCDHCPDIR)/%)
 
 FILEMODE=	0644
-OWNER=		root
 GROUP=		sys
 
 .KEEP_STATE:
 
-all:		$(ETCPROG)
+all:
+install:	$(ETCDHCPFILES)
 
-install:	all $(ETCDHCPDIR) $(ETCDHCPPROG)
-
-$(ETCDHCPDIR)/% : %
+$(ETCDHCPDIR)/%: %
 		$(INS.file)
-
-$(ETCDHCPDIR):
-		$(INS.dir)
-
-FRC:
-
-clean clobber lint:
