--- a/usr/src/lib/libdhcpagent/Makefile
+++ b/usr/src/lib/libdhcpagent/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -27,7 +27,7 @@
 
 include ../Makefile.lib
 
-HDRS =		dhcp_hostconf.h dhcpagent_ipc.h dhcpagent_util.h
+HDRS =		dhcp_hostconf.h dhcpagent_ipc.h dhcpagent_util.h dhcp_stable.h
 HDRDIR =	common
 SUBDIRS =	$(MACH)
 
