PSARC 2006/568 direct boot (dboot) for x86 6475880 vestiges of old boot code on i386/amd64 should be purged (build fix) 6477963 _update_sregs should be written in C (gcc link fix) 6478642 Solaris needs to support multiple x86 platforms (lint fix)

--- a/usr/src/uts/intel/Makefile
+++ b/usr/src/uts/intel/Makefile
@@ -134,7 +134,7 @@ globallint := LINTFLAGS += -erroff=E_NAME_MULTIPLY_DEF2
 
 globallint:
 	@-$(ECHO) "\nFULL KERNEL: global crosschecks:"
-	@-$(LINT) $(LINTFLAGS) $(LINT_LIBS) 2>&1 | $(LGREP.2) | $(LGREP.intel)
+	@-$(LINT) $(LINTFLAGS) $(LINT_LIBS) 2>&1 | $(LGREP.intel) | $(LGREP.2)
 
 lint:	modlintlib .WAIT $(LINT_DEPS)
 
