PSARC 2005/204 RaidCfg project PSARC 2006/663 RaidCfg mpt adjustment 6508590 raidctl utility should use the pass_thru interface for mpt support

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -356,6 +356,7 @@ COMMON_SUBDIRS = \
 	lib/libpool \
 	lib/libproc \
 	lib/libpthread \
+	lib/libraidcfg \
 	lib/librcm \
 	lib/librestart \
 	lib/librt \
@@ -392,6 +393,7 @@ COMMON_SUBDIRS = \
 	lib/passwdutil \
 	lib/pkcs11 \
 	lib/print \
+	lib/raidcfg_plugins \
 	lib/fm \
 	lib/udapl \
 	lib/watchmalloc \
