--- a/usr/src/head/Makefile
+++ b/usr/src/head/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI" 
@@ -135,6 +135,8 @@ HDRS=   $($(MACH)_HDRS)  $(ATTRDB_HDRS) \
 	pthread.h	\
 	pw.h		\
 	pwd.h		\
+	raidcfg.h	\
+	raidcfg_spi.h	\
 	rctl.h		\
 	re_comp.h	\
 	regex.h		\
