--- a/usr/src/uts/intel/Makefile.files
+++ b/usr/src/uts/intel/Makefile.files
@@ -136,6 +136,7 @@ I915_OBJS += i915_sundrv.o i915_dma.o i915_drv.o i915_irq.o i915_mem.o
 LOGI_OBJS += logi.o
 MSMOUSE_OBJS += msm.o
 MSCSI_OBJS += mscsi.o
+PCICFG_OBJS += pcicfg.o
 PCI_E_PCINEXUS_OBJS += pcie_pci.o
 PCI_PCINEXUS_OBJS += pci_pci.o
 PCIEHPCNEXUS_OBJS += pciehpc_x86.o pciehpc_acpi.o pciehpc_nvidia.o
