6516004 libdhcpagent and libdhcputil missing Makefile dependencies on libdlpi 6516629 fix for CR 6464136 has brought CR 6193247 back to life 6516668 dhcpagent needs a short-term fix for CR 6516663

--- a/usr/src/lib/Makefile
+++ b/usr/src/lib/Makefile
@@ -464,9 +464,9 @@ libcmdutils:	libavl
 libcontract:	libnvpair
 libdevid:	libdevinfo
 libdevinfo:	libnvpair libsec
-libdhcpagent:	libdhcputil libnsl libsocket
+libdhcpagent:	libsocket libdhcputil libuuid libdlpi
 libdhcpsvc:	libinetutil
-libdhcputil:	libinetutil
+libdhcputil:	libnsl libgen libinetutil libdlpi
 libdladm:	libdlpi libdevinfo libwladm libinetutil
 libdtrace:	libproc libgen libctf
 libdtrace_jni:	libuutil libdtrace
