6433084 convert sd to use cmlb 6472643 sd should not depend on how libefi or fdisk use an ioctl

--- a/usr/src/uts/intel/sd/Makefile
+++ b/usr/src/uts/intel/sd/Makefile
@@ -20,7 +20,7 @@
 #
 # uts/intel/io/sd/Makefile
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -125,6 +125,7 @@ TEST		= test
 # any loaded after the first are ignored.
 
 SCSI_FILES = $(SCSI_OBJS:%.o=-l ../scsi/%.ll)
+CMLB_FILES = $(CMLB_OBJS:%.o=-l ../cmlb/%.ll)
 
 warlock: warlock_alone warlock_with_mpt warlock_with_glm
 
@@ -133,8 +134,9 @@ warlock_alone: $(WARLOCK_OK)
 %.wlcmd:
 	cd $(WLCMD_DIR); $(TEST) -f $@  || $(SCCS) get $@
 
-$(WARLOCK_OK):	sd.wlcmd $(WARLOCK_OUT) scsi_files warlock_ddi.files
+$(WARLOCK_OK):	sd.wlcmd $(WARLOCK_OUT) scsi_files warlock_ddi.files cmlb_files
 	$(WARLOCK) -c $(WLCMD_DIR)/sd.wlcmd $(WARLOCK_OUT) $(SCSI_FILES) \
+		$(CMLB_FILES) \
 		-l ../warlock/ddi_dki_impl.ll
 	$(TOUCH) $@
 
@@ -142,19 +144,19 @@ $(WARLOCK_OK):	sd.wlcmd $(WARLOCK_OUT) scsi_files warlock_ddi.files
 	$(WLCC) $(CPPFLAGS) -DDEBUG -o $@ $<
 
 warlock_with_glm: sd_with_glm.wlcmd $(WARLOCK_OUT) scsi_files glm_files \
-	warlock_ddi.files
+	warlock_ddi.files cmlb_files
 	$(WARLOCK) -c $(WLCMD_DIR)/sd_with_glm.wlcmd \
 		$(WARLOCK_OUT) \
 		$(CLOSED)/uts/intel/glm/*.ll \
-		 $(SCSI_FILES)  \
+		 $(SCSI_FILES) $(CMLB_FILES) \
 		-l ../warlock/ddi_dki_impl.ll
 
 warlock_with_mpt: sd_with_mpt.wlcmd $(WARLOCK_OUT) scsi_files mpt_files \
-	warlock_ddi.files
+	warlock_ddi.files cmlb_files
 	$(WARLOCK) -c $(WLCMD_DIR)/sd_with_mpt.wlcmd \
 		$(WARLOCK_OUT) \
 		$(CLOSED)/uts/intel/mpt/*.ll \
-		$(SCSI_FILES)  \
+		$(SCSI_FILES) $(CMLB_FILES) \
 		-l ../warlock/ddi_dki_impl.ll
 
 glm_files:
@@ -162,6 +164,9 @@ glm_files:
 
 mpt_files:
 	@cd $(CLOSED)/uts/intel/mpt; pwd; $(MAKE) warlock
+
+cmlb_files:
+	@cd ../cmlb; pwd; $(MAKE) warlock
 
 scsi_files:
 	@cd ../scsi; pwd; $(MAKE) warlock
